--- a/index.html
+++ b/index.html
@@ -148,43 +148,42 @@
               </div>
             </div>
           </div>
-          <div class="gets">
-            <h2 class="gets__title">Ты получишь:</h2>
-            <div class="gets-inner">
-              <div class="gets-box">
-                <p class="gets-box__text">12 тематических уроков в записи</p>
-                <div class="img__box">
-                  <img src="./images/Star.svg" alt="Star" class="star-img" />
-                  <img src="./images/fcheck.svg" alt="Fcheck" class="fcheck-img" />
-                </div>
+        </div>
+        <div class="gets">
+          <h2 class="gets__title">Ты получишь:</h2>
+          <div class="gets-inner">
+            <div class="gets-box">
+              <p class="gets-box__text">12 тематических уроков в записи</p>
+              <div class="img__box">
+                <img src="./images/Star.svg" alt="Star" class="star-img" />
+                <img src="./images/fcheck.svg" alt="Fcheck" class="fcheck-img" />
               </div>
-              <div class="gets-box">
-                <p class="gets-box__text">
-                  12 online - разборов своего бизнеса лично Алексом Яновским
-                </p>
-                <div class="img__box">
-                  <img src="./images/Star.svg" alt="Star" class="star-img" />
-                  <img src="./images/fcheck.svg" alt="Fcheck" class="fcheck-img" />
-                </div>
+            </div>
+            <div class="gets-box">
+              <p class="gets-box__text">
+                12 online - разборов своего бизнеса лично Алексом Яновским
+              </p>
+              <div class="img__box">
+                <img src="./images/Star.svg" alt="Star" class="star-img" />
+                <img src="./images/fcheck.svg" alt="Fcheck" class="fcheck-img" />
               </div>
-              <div class="gets-box">
-                <p class="gets-box__text">
-                  Возможность смотреть за бизнесами других участников и перенимать лучшие практики
-                </p>
-                <div class="img__box">
-                  <img src="./images/Star.svg" alt="Star" class="star-img" />
-                  <img src="./images/fcheck.svg" alt="Fcheck" class="fcheck-img" />
-                </div>
+            </div>
+            <div class="gets-box">
+              <p class="gets-box__text">
+                Возможность смотреть за бизнесами других участников и перенимать лучшие практики
+              </p>
+              <div class="img__box">
+                <img src="./images/Star.svg" alt="Star" class="star-img" />
+                <img src="./images/fcheck.svg" alt="Fcheck" class="fcheck-img" />
               </div>
-              <div class="gets-box">
-                <p class="gets-box__text">
-                  Эффективные методики, основанные на опыте увеличения чистой прибыли в 100+
-                  компаниях
-                </p>
-                <div class="img__box">
-                  <img src="./images/Star.svg" alt="Star" class="star-img" />
-                  <img src="./images/fcheck.svg" alt="Fcheck" class="fcheck-img" />
-                </div>
+            </div>
+            <div class="gets-box">
+              <p class="gets-box__text">
+                Эффективные методики, основанные на опыте увеличения чистой прибыли в 100+ компаниях
+              </p>
+              <div class="img__box">
+                <img src="./images/Star.svg" alt="Star" class="star-img" />
+                <img src="./images/fcheck.svg" alt="Fcheck" class="fcheck-img" />
               </div>
             </div>
           </div>
@@ -200,18 +199,20 @@
                 <h2 class="footer-phone__text">Украина</h2>
                 <a href="tel:+380894200228" class="footer-box__phone">+38 089 420 02 28</a>
               </div>
-              <a class="telegram" href="#"
-                ><img src="./images/th-footer.svg" alt="tg" /> Telegram</a
-              >
             </div>
             <div class="footer-box__europe">
               <div>
                 <h2 class="footer-phone__text">Европа</h2>
                 <a href="tel:+37070044769" class="footer-box__phone">+370 7 004 47 69</a>
               </div>
-              <a href="mailto:info@alexyanovsky.info"
-                ><img src="./images/gmail.svg" alt="gmail" />info@alexyanovsky.info</a
-              >
+            </div>
+            <div class="footer-social">
+              <a class="telegram" href="#">
+                <img src="./images/th-footer.svg" alt="tg" /> Telegram
+              </a>
+              <a class="gmail" href="mailto:info@alexyanovsky.info">
+                <img src="./images/gmail.svg" alt="gmail" />info@alexyanovsky.info
+              </a>
             </div>
           </div>
           <div class="footer__links">
